--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
                     <img class="logo__img" src="/img/logo.svg" alt="Логотип">
                 </a> -->
                 <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a class="menu__link" href="#">
-                                Продукт:
-                            </a>
-                        </li>  
+                    <img id="my_image"></img>
+                    <ul class="menu__list">  
                         <li class='menu__item'>
                             <a class="menu__link" id="my_word" href="#"></a>
                         </li>                     
@@ -34,9 +30,8 @@
             </div>
         </header>
 
-    <script src="./main.js" type="module"></script>
-    <script src="./three.js" type="module"></script>
-    <script src="./functions_for_three.js" type="module"></script>
+    <script src="/js/main.js" type="module"></script>
+    <script src="./js/three.js" type="module"></script>
          
     </body>
 </html>
